* Removed jdk incubated packages in favor of java.net.http * Updated Linux chromedriver and added a script to obtain different versions
Google changed the way they package chromedrivers. They are no longer valid for a range of versions. You must use the driver version appropriate to the browser engine.

	modified:   README.md
	modified:   build.gradle
	renamed:    javascript-security-extension-all-1.0.jar -> javascript-security-extension-all-1.1.jar
	modified:   src/main/java/org.focalpoint.isns.burp.srichecks/Requester.java
	modified:   src/main/java/org.focalpoint.isns.burp.srichecks/ScriptFinder.java
	modified:   src/main/resources/linux/chromedriver
	new file:   src/main/resources/linux/dl-driver.sh
	modified:   tests.gradle